<resources>
    <string name="blelinker_app_name">xiaoluobo</string>
    <string name="blelinker_ssid">SSID:</string>
    <string name="blelinker_password">Password:</string>
    <string name="blelinker_ble_name">BLE Name:</string>
    <string name="blelinker_start">Start</string>
    <string name="blelinker_stop">Stop</string>
    <string name="blelinker_no_valid_wifi_connection">No valid wifi connection</string>
    <string name="blelinker_canceling">Canceling, please wait...</string>
    <string name="blelinker_permission_denied">Permission Denied! Please go to phone Settings to allow the app\'s permissions request</string>
    <string name="blelinker_location_prodiver_disabled">Your phone\'s location provider is disabled, please enable it!</string>
    <string name="blelinker_ble_not_supported">Your phone doesn\'t support BLE!</string>
    <string name="blelinker_bluetooth_disabled">Bluetooth is disabled</string>
    <string name="blelinker_move">move</string>
    <string name="blelinker_snd">sound</string>
    <string name="blelinker_sound">Sound</string>
    <string name="blelinker_moveu">MoveUP</string>
    <string name="blelinker_moveD">MoveDown</string>
    <string name="blelinker_wifi">wifi</string>
    <string name="blelinker_wifiD">WifiDis</string>
    <string name="blelinker_face">face</string>
    <string name="blelinker_sing">sing</string>
    <string name="blelinker_Dance">Dance</string>
    <string name="blelinker_Story">Strory</string>
    <string name="blelinker_wheel">wheel</string>
    <string name="blelinker_MoveL">MoveL</string>
    <string name="blelinker_MoveR">MoveR</string>
    <string name="blelinker_stopmove">stopmove</string>
</resources>
