<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/blelinker_start" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:padding="10dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blelinker_ssid" />

            <EditText
                android:id="@+id/ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:enabled="false"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blelinker_password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:enabled="false"
                android:singleLine="true" />
        </TableRow>
    </TableLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:columnCount="2"
        android:rowCount="7" >

        <Button
            android:id="@+id/BtnWifiD"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_row="1"
            android:enabled="false"
            android:text="@string/blelinker_wifiD" />

        <Button
            android:id="@+id/btnWifi"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_row="1"
            android:enabled="false"
            android:text="@string/blelinker_wifi" />

        <Button
            android:id="@+id/btnWheel"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_row="4"
            android:enabled="false"
            android:text="@string/blelinker_wheel" />

        <Button
            android:id="@+id/btnMoveD"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_row="2"
            android:enabled="false"
            android:text="@string/blelinker_moveD" />

        <Button
            android:id="@+id/BtnMoveU"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_row="2"
            android:enabled="false"
            android:text="@string/blelinker_moveu" />

        <Button
            android:id="@+id/BtnMoveL"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_row="3"
            android:enabled="false"
            android:text="@string/blelinker_MoveL" />

        <Button
            android:id="@+id/BtnStory"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_row="5"
            android:enabled="false"
            android:text="@string/blelinker_Story" />

        <Button
            android:id="@+id/BtnMoveR"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_row="3"
            android:enabled="false"
            android:text="@string/blelinker_MoveR" />

        <Button
            android:id="@+id/BtnFace"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_row="4"
            android:enabled="false"
            android:text="@string/blelinker_face" />

        <Button
            android:id="@+id/BtnStop"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:enabled="false"
            android:text="@string/blelinker_stopmove" />

    </GridLayout>

</LinearLayout>